[gd_scene load_steps=8 format=3 uid="uid://eb8bsfpekeeu3d"]

[ext_resource type="Script" uid="uid://br1qdnow3cmfj" path="res://GameManager3D.gd" id="1"]
[ext_resource type="Script" uid="uid://gad355jhly4x" path="res://Player3D.gd" id="2"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(1, 2, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_1"]
radius = 0.5
height = 2.0

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(1, 1, 1)

[sub_resource type="BoxShape3D" id="BoxShape3D_2"]
size = Vector3(1, 1, 1)

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.5, 0.7, 1.0, 1)
ambient_light_source = 2
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 0.3

[node name="Main3D" type="Node3D"]
script = ExtResource("1")

[node name="Environment" type="Node3D" parent="."]

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment"]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 0, 10, 0)
light_energy = 1.0
shadow_enabled = true

[node name="Ground" type="StaticBody3D" parent="Environment"]

[node name="GroundMesh" type="MeshInstance3D" parent="Environment/Ground"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 100, 0, -1, 0)
mesh = SubResource("BoxMesh_1")

[node name="GroundCollision" type="CollisionShape3D" parent="Environment/Ground"]
transform = Transform3D(50, 0, 0, 0, 1, 0, 0, 0, 100, 0, -1, 0)
shape = SubResource("BoxShape3D_2")

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -5)
script = ExtResource("2")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Player"]
mesh = SubResource("CapsuleMesh_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
shape = SubResource("BoxShape3D_1")

[node name="Camera3D" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 5)
fov = 75.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -80.0
offset_right = 200.0
offset_bottom = -60.0
text = "Score: 0"

[node name="StreakLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = 200.0
offset_bottom = -40.0
text = "Streak: 0"

[node name="CoinsLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -40.0
offset_right = 200.0
offset_bottom = -20.0
text = "Coins: 0"

[node name="XPLabel" type="Label" parent="UI"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -20.0
offset_right = 200.0
text = "XP: 0"

[node name="InstructionsLabel" type="Label" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -280.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 140.0
text = "A/D or ←→: Switch lanes
W or ↑: Jump (avoid ground hazards)
S or ↓: Slide (avoid overhead hazards)

Perfect dodges build streak multiplier!

M: Toggle music | +/-: Volume"
horizontal_alignment = 2

[node name="GameOverLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
text = "GAME OVER"
horizontal_alignment = 1

[node name="RestartLabel" type="Label" parent="UI"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
text = "Press A or D to restart"
horizontal_alignment = 1
